# steller-level-4

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  commit-all.ps1  commit-all.sh  deploy-all.ps1  deploy-all.sh  package-lock.json  package.json  push-to-github.ps1  vite.config.js
.github/workflows/: ci.yml
contracts/rent_split/src/: lib.rs
contracts/room_manager/: Cargo.toml
contracts/room_manager/src/: lib.rs
src/: App.jsx  index.css  main.jsx
src/components/: AdminDashboard.jsx  ContractPaymentForm.jsx  ErrorBoundary.jsx  FeedbackModal.jsx  Header.jsx  OfflineBanner.jsx  OnboardingModal.jsx  ProofOfUsageView.jsx  Skeleton.jsx  Toast.jsx
src/constants/: network.js
src/hooks/: useRoomManager.js
src/utils/: analytics.js  contract.js  errors.js  format.js
