[package]
name = "room_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }
arbitrary = { version = "=1.3.2", features = ["derive"] }
derive_arbitrary = "=1.3.2"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
